# aqua_sentinel

./: .gitignore  LICENSE  README.md  sim  sim.cpp
debug/: test_udp_receiver.py  udp_listener.cpp  udp_listener.py  udp_test.py  verify_udp.py
debug/captured_data/: metadata.json
debug/simple_capture/: capture_20260115_205620.json  capture_20260115_205749.json  capture_20260115_205819.json  capture_20260115_205850.json  capture_20260115_205920.json  capture_20260115_205954.json  capture_20260115_210025.json  capture_20260115_210057.json  capture_20260115_210128.json  capture_20260115_210200.json  capture_20260115_210231.json  capture_20260115_210302.json  capture_20260115_210333.json  capture_20260115_210405.json  capture_20260115_210436.json  capture_20260115_210507.json  capture_20260115_210537.json  capture_20260115_210605.json  capture_20260117_094942.json  capture_20260117_095012.json  capture_20260117_095044.json  capture_20260117_102100.json  capture_20260117_102225.json  capture_20260117_102242.json  capture_20260201_164144.json  capture_20260201_172319.json  capture_20260201_172357.json  capture_20260201_172431.json  capture_20260201_172502.json  capture_20260201_172536.json  capture_20260201_172610.json  capture_20260201_172645.json  capture_20260201_172719.json  capture_20260201_172754.json  capture_20260201_172832.json  capture_20260201_172907.json  capture_20260201_172942.json  capture_20260201_173015.json  capture_20260201_173049.json  capture_20260201_173126.json  (+49 more)
docs/: architecture.md  data_flow.md
embedded_firmware/: firmware.md
embedded_firmware/esp32_firmware/: platformio.ini
embedded_firmware/esp32_firmware/src/: main.cpp
embedded_firmware/esp32s3_firmware/: platformio.ini
embedded_firmware/esp32s3_firmware/src/: main.cpp
mqtt/: payload_examples.json  topics.md
ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/install/aqua_msgs/share/aqua_msgs/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/aqua_msgs/share/aqua_msgs/cmake/: aqua_msgsConfig.cmake
ros2_ws/install/controller/lib/controller/: controller  rl_agent
ros2_ws/install/controller/share/controller/: package.sh  package.xml
ros2_ws/install/controller/share/controller/launch/: control.launch.py  rl_agent.launch.py
ros2_ws/install/mqtt_bridge/share/mqtt_bridge/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/mqtt_bridge/share/mqtt_bridge/cmake/: mqtt_bridgeConfig.cmake
ros2_ws/install/mqtt_leak_bridge/share/ament_index/resource_index/package_run_dependencies/: mqtt_leak_bridge
ros2_ws/install/mqtt_leak_bridge/share/mqtt_leak_bridge/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/pipe_sensor_bridge/lib/pipe_sensor_bridge/: init_config_publisher  maintenance.sh  mqtt_subscriber_bridge
ros2_ws/install/pipe_sensor_bridge/share/pipe_sensor_bridge/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/pipe_sensor_bridge/share/pipe_sensor_bridge/cmake/: pipe_sensor_bridgeConfig.cmake
ros2_ws/install/pipe_sensor_bridge/share/pipe_sensor_bridge/config/: mqtt_params.yaml
ros2_ws/install/pipe_sensor_bridge/share/pipe_sensor_bridge/launch/: pipe_bridge.launch.py
ros2_ws/install/rl_controller/share/rl_controller/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/sensor_bridge/share/ament_index/resource_index/package_run_dependencies/: sensor_bridge
ros2_ws/install/sensor_bridge/share/ament_index/resource_index/parent_prefix_path/: sensor_bridge
ros2_ws/install/sensor_bridge/share/sensor_bridge/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/sim_bridge/share/sim_bridge/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/log/: latest_build
ros2_ws/src/aqua_msgs/: CMakeLists.txt
ros2_ws/src/aqua_msgs/msg/: PipeSensor.msg
ros2_ws/src/controller/: controller.md  package.xml  setup.py
ros2_ws/src/controller/launch/: control.launch.py
ros2_ws/src/mqtt_bridge/: CMakeLists.txt
ros2_ws/src/mqtt_leak_bridge/: CMakeLists.txt  package.xml
ros2_ws/src/pipe_sensor_bridge/: CMakeLists.txt  sensor_bridge.md
ros2_ws/src/pipe_sensor_bridge/scripts/: monitor_sensors.sh  test_valve_control.sh
ros2_ws/src/pipe_sensor_bridge/src/: init_config_publisher.cpp  mqtt_subscriber.cpp
ros2_ws/src/rl_controller/: package.xml  setup.py
ros2_ws/src/sensor_bridge/: CMakeLists.txt  package.xml
ros2_ws/src/sensor_bridge/include/sensor_bridge/: mqtt_pub.h  mqtt_sub.h
ros2_ws/src/sim_bridge/: CMakeLists.txt
simulator/: CMakeLists.txt  init_sensor.json  leak.json  package.xml  sensor.json  sim  sim.cpp  simulation.md  system_state.json  water_ros2
