<?xml version="1.0"?>
<package format="3">
  <name>water_scada_sim</name>
  <version>0.1.0</version>

  <description>
    OpenGL-based city water &amp; sewage SCADA simulator with ROS 2 Humble and socket integration 
  </description>

  <maintainer email="arkababu2003@gmail.com">Arka</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <exec_depend>libgl1-mesa-dev</exec_depend>
  <exec_depend>freeglut3-dev</exec_depend>
  <exec_depend>libjsoncpp-dev</exec_depend>

</package>
